# Minidere2x

./: .gitignore  License.md  Readme.md  pyproject.toml
Minidere2x/: Minidere2x.py  __main__.py
